Fix redirect to page-merci-guide.html instead of page-confirm.html

--- a/page-guide-gratuit.html
+++ b/page-guide-gratuit.html
@@ -730,7 +730,7 @@
           console.warn('Email transactionnel non envoyÃ©, statut :', response.status);
         }
         // Step 3: Redirect to confirmation page
-        window.location.href = 'page-confirm.html';
+        window.location.href = 'page-merci-guide.html';
       })
       .catch(function(error) {
         console.error('Erreur:', error);
