Fix encoding: replace accented chars with HTML entities for reliable display

--- a/page-guide-gratuit.html
+++ b/page-guide-gratuit.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guide Gratuit - Comment Se Rendormir en 15 Minutes | Sommeil RÃ©parateur</title>
-  <meta name="description" content="TÃ©lÃ©chargez gratuitement notre guide 'Comment se rendormir en moins de 15 minutes' et dÃ©couvrez des techniques efficaces pour retrouver le sommeil lors des rÃ©veils nocturnes.">
+  <title>Guide Gratuit - Comment Se Rendormir en 15 Minutes | Sommeil R&eacute;parateur</title>
+  <meta name="description" content="T&eacute;l&eacute;chargez gratuitement notre guide 'Comment se rendormir en moins de 15 minutes' et d&eacute;couvrez des techniques efficaces pour retrouver le sommeil lors des r&eacute;veils nocturnes.">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Guide Gratuit - Comment Se Rendormir en 15 Minutes | Sommeil RÃ©parateur">
-  <meta property="og:description" content="TÃ©lÃ©chargez gratuitement notre guide pratique et dÃ©couvrez les techniques pour retrouver le sommeil rapidement lors des rÃ©veils nocturnes.">
+  <meta property="og:title" content="Guide Gratuit - Comment Se Rendormir en 15 Minutes | Sommeil R&eacute;parateur">
+  <meta property="og:description" content="T&eacute;l&eacute;chargez gratuitement notre guide pratique et d&eacute;couvrez les techniques pour retrouver le sommeil rapidement lors des r&eacute;veils nocturnes.">
   <meta property="og:type" content="website">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -512,7 +512,7 @@
   <div class="container">
 
     <!-- Logo -->
-    <div class="logo">Sommeil<span> RÃ©parateur</span></div>
+    <div class="logo">Sommeil<span> R&eacute;parateur</span></div>
     <p class="tagline">Votre guide vers des nuits paisibles</p>
 
     <!-- Badge -->
@@ -522,18 +522,18 @@
     <div class="guide-visual">
       <span class="guide-visual-icon">&#127763;</span>
       <div class="guide-visual-title">Comment Se Rendormir en Moins de 15 Minutes</div>
-      <div class="guide-visual-sub">Le guide pratique pour retrouver le sommeil lors des rÃ©veils nocturnes</div>
+      <div class="guide-visual-sub">Le guide pratique pour retrouver le sommeil lors des r&eacute;veils nocturnes</div>
     </div>
 
     <!-- Main Headline -->
-    <h1 class="main-headline">Dites adieu aux <span>nuits sans sommeil</span> dÃ¨s ce soir</h1>
+    <h1 class="main-headline">Dites adieu aux <span>nuits sans sommeil</span> d&egrave;s ce soir</h1>
 
     <!-- Subtitle -->
-    <p class="subtitle">TÃ©lÃ©chargez <strong>GRATUITEMENT</strong> ce guide pratique et dÃ©couvrez les techniques pour retrouver le sommeil rapidement lors des rÃ©veils nocturnes.</p>
+    <p class="subtitle">T&eacute;l&eacute;chargez <strong>GRATUITEMENT</strong> ce guide pratique et d&eacute;couvrez les techniques pour retrouver le sommeil rapidement lors des r&eacute;veils nocturnes.</p>
 
     <!-- Benefits -->
     <div class="benefits">
-      <div class="benefits-title">&#10024; Ce que vous allez dÃ©couvrir</div>
+      <div class="benefits-title">&#10024; Ce que vous allez d&eacute;couvrir</div>
 
       <div class="benefit-item">
         <div class="benefit-check">
@@ -546,14 +546,14 @@
         <div class="benefit-check">
           <svg viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg>
         </div>
-        <div><strong>Les 3 erreurs</strong> qui vous empÃªchent de vous rendormir</div>
+        <div><strong>Les 3 erreurs</strong> qui vous emp&ecirc;chent de vous rendormir</div>
       </div>
 
       <div class="benefit-item">
         <div class="benefit-check">
           <svg viewBox="0 0 24 24"><polyline points="20 6 9 17 4 12"></polyline></svg>
         </div>
-        <div><strong>Un rituel anti-insomnie</strong> Ã  appliquer dÃ¨s cette nuit</div>
+        <div><strong>Un rituel anti-insomnie</strong> &agrave; appliquer d&egrave;s cette nuit</div>
       </div>
 
       <div class="benefit-item">
@@ -602,7 +602,7 @@
       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 1L3 5v6c0 5.25 3.75 10.15 9 11.35C17.25 21.15 21 16.25 21 11V5L12 1z"/>
       </svg>
-      <span>Vos donnÃ©es sont protÃ©gÃ©es. Nous respectons votre vie privÃ©e et ne partageons jamais vos informations.</span>
+      <span>Vos donn&eacute;es sont prot&eacute;g&eacute;es. Nous respectons votre vie priv&eacute;e et ne partageons jamais vos informations.</span>
     </div>
 
     <!-- Divider -->
@@ -612,22 +612,22 @@
 
     <!-- Upsell Section -->
     <div class="upsell-section">
-      <div class="upsell-eyebrow">&#11088; Offre SpÃ©ciale</div>
-      <div class="upsell-title">Vous voulez la mÃ©thode complÃ¨te&nbsp;?</div>
+      <div class="upsell-eyebrow">&#11088; Offre Sp&eacute;ciale</div>
+      <div class="upsell-title">Vous voulez la m&eacute;thode compl&egrave;te&nbsp;?</div>
       <div class="upsell-description">
-        DÃ©couvrez le guide complet <strong>Sommeil RÃ©parateur &ndash; Le Guide Complet</strong>&nbsp;:
-        programme pas-Ã -pas, techniques avancÃ©es et plans personnalisÃ©s pour transformer durablement vos nuits.
+        D&eacute;couvrez le guide complet <strong>Sommeil R&eacute;parateur &ndash; Le Guide Complet</strong>&nbsp;:
+        programme pas-&agrave;-pas, techniques avanc&eacute;es et plans personnalis&eacute;s pour transformer durablement vos nuits.
       </div>
       <div class="upsell-price">
-        <span class="old-price">27&nbsp;â¬</span>
-        <span class="new-price">14,90&nbsp;â¬</span>
+        <span class="old-price">27&nbsp;&euro;</span>
+        <span class="new-price">14,90&nbsp;&euro;</span>
       </div>
-      <a href="page-vente.html" class="upsell-btn">&#128214;&nbsp; DÃ©couvrir le Guide Complet</a>
+      <a href="page-vente.html" class="upsell-btn">&#128214;&nbsp; D&eacute;couvrir le Guide Complet</a>
     </div>
 
     <!-- Footer Link -->
     <div class="footer-link">
-      <a href="index.html">&#8592; Retour Ã  l&rsquo;accueil</a>
+      <a href="index.html">&#8592; Retour &agrave; l&rsquo;accueil</a>
     </div>
 
   </div>
@@ -702,7 +702,7 @@
           return { ok: true };
         }
         return response.json().then(function(data) {
-          // Code 'duplicate_parameter' means contact already exists â treat as success
+          // Code 'duplicate_parameter' means contact already exists &ndash; treat as success
           if (data && data.code === 'duplicate_parameter') {
             return { ok: true };
           }
@@ -727,7 +727,7 @@
       .then(function(response) {
         if (!response.ok && response.status !== 201) {
           // Non-blocking: if email send fails, still redirect
-          console.warn('Email transactionnel non envoyÃ©, statut :', response.status);
+          console.warn('Email transactionnel non envoy&eacute;, statut :', response.status);
         }
         // Step 3: Redirect to confirmation page
         window.location.href = 'page-merci-guide.html';
@@ -737,7 +737,7 @@
         setLoading(false);
         showAlert(
           'error-alert',
-          '&#9888;&nbsp; Une erreur est survenue. Veuillez rÃ©essayer ou nous contacter directement.'
+          '&#9888;&nbsp; Une erreur est survenue. Veuillez r&eacute;essayer ou nous contacter directement.'
         );
       });
     }
