Update guide title to "L'erreur N°1 qui vous empêche de vous rendormir la nuit"

--- a/page-guide-gratuit.html
+++ b/page-guide-gratuit.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guide Gratuit - Comment Se Rendormir en 15 Minutes | Sommeil R&eacute;parateur</title>
-  <meta name="description" content="T&eacute;l&eacute;chargez gratuitement notre guide 'Comment se rendormir en moins de 15 minutes' et d&eacute;couvrez des techniques efficaces pour retrouver le sommeil lors des r&eacute;veils nocturnes.">
+  <title>Guide Gratuit - L'erreur N&deg;1 qui vous emp&ecirc;che de vous rendormir | Sommeil R&eacute;parateur</title>
+  <meta name="description" content="T&eacute;l&eacute;chargez gratuitement notre guide 'L'erreur N&deg;1 qui vous emp&ecirc;che de vous rendormir la nuit' et d&eacute;couvrez des techniques efficaces pour retrouver le sommeil lors des r&eacute;veils nocturnes.">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Guide Gratuit - Comment Se Rendormir en 15 Minutes | Sommeil R&eacute;parateur">
-  <meta property="og:description" content="T&eacute;l&eacute;chargez gratuitement notre guide pratique et d&eacute;couvrez les techniques pour retrouver le sommeil rapidement lors des r&eacute;veils nocturnes.">
+  <meta property="og:title" content="Guide Gratuit - L'erreur N&deg;1 qui vous emp&ecirc;che de vous rendormir | Sommeil R&eacute;parateur">
+  <meta property="og:description" content="D&eacute;couvrez l'erreur n&deg;1 qui vous emp&ecirc;che de vous rendormir la nuit et comment l'&eacute;viter.">
   <meta property="og:type" content="website">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -521,8 +521,8 @@
     <!-- Guide Visual -->
     <div class="guide-visual">
       <span class="guide-visual-icon">&#127763;</span>
-      <div class="guide-visual-title">Comment Se Rendormir en Moins de 15 Minutes</div>
-      <div class="guide-visual-sub">Le guide pratique pour retrouver le sommeil lors des r&eacute;veils nocturnes</div>
+      <div class="guide-visual-title">L'erreur N&deg;1 qui vous emp&ecirc;che de vous rendormir la nuit</div>
+      <div class="guide-visual-sub">Le guide gratuit par Sommeil R&eacute;parateur lors des r&eacute;veils nocturnes</div>
     </div>
 
     <!-- Main Headline -->
